backport: re PR fortran/57023 (Not packing arrays with changing variable used for size)

2015-01-24  Thomas Koenig  <tkoenig@netcologne.de>

	Backport from trunk
	PR fortran/57023
	* dependency.c (callback_dummy_intent_not_int):  New function.
	(dummy_intent_not_in):  New function.
	(gfc_full_array_ref_p):  Use dummy_intent_not_in.

2015-01-24  Thomas Koenig  <tkoenig@netcologne.de>

	Backport from trunk
	PR fortran/57023
	* gfortran.dg/internal_pack_15.f90:  New test.

From-SVN: r220082